samples/tests/functional/sol_kubernetes_v2/test_instantiate_cnf_resources/contents/Files/kubernetes/pod.yaml
apiVersion: v1
kind: Pod
metadata:
  namespace: default
  name: vdu1
spec:
  containers:
  - image: nginx
    imagePullPolicy: IfNotPresent
    name: web-server
    resources:
      limits:
        memory: "200Mi"
      requests:
        memory: "100Mi"
    ports:
    - containerPort: 8080
